fixed bug in getPackageOpeningOptions